--- a/src/App.css
+++ b/src/App.css
@@ -1,35 +1,38 @@
-.App {
+body {
+  font-family: 'Hammersmith One', sans-serif;
+}
+button {
+  border: 4px solid #222;
+  background-color: #fff;
+  padding: 0 3rem;
+  font-size: 2rem;
   text-align: center;
+  text-decoration: none;
+  display: inline-block;
 }
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
+.container {
+  height: 100vh;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+}
+.stats-block {
+  width: 100%;
+  height: 6rem;
+  padding: 1rem 4.5rem;
+  border-bottom: 3px solid #222;
+  margin-bottom: 3rem;
+  display: flex;
+  justify-content: space-between;
+}
+.single-card {
+  display: inline-block;
+}
+.matched {
+  transition-delay: .5s;
+  transition-duration: .5s;
+  opacity: .6;
+}
+.btn-play {
+  margin: 10rem auto;  
 }
 
-.App-link {
-  color: #61dafb;
-}
 
-
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
