--- a/src/App.css
+++ b/src/App.css
@@ -26,6 +26,9 @@ button {
 .single-card {
   display: inline-block;
 }
+.single-card img {
+  max-width: 190px;
+}
 .matched {
   transition-delay: .5s;
   transition-duration: .5s;
